Implement image picker

--- a/iPark/Info.plist
+++ b/iPark/Info.plist
@@ -97,5 +97,11 @@
 		<string>Lato-Thin.ttf</string>
 		<string>Lato-ThinItalic.ttf</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>$(PRODUCT_NAME) wants to use camera to take avatar.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>$(PRODUCT_NAME) wants to access photo library to get the picture.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>$(PRODUCT_NAME) wants to allow the location permission to show the map.</string>
 </dict>
 </plist>
